made top bar sticky, fixed resulting layout problems except for top width

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -19,6 +19,7 @@ html {
   background: #CDCDCD;
   max-width: 500px;
   width: 100%;
+  height: 100%;
   margin: 0 auto;
   padding: 1rem 2rem;
   display: flex;
@@ -43,6 +44,7 @@ html {
   background: #CDCDCD;
   max-width: 500px;
   width: 100%;
+  height: 100%;
   margin: 0 auto;
   padding: 1rem 2rem;
   display: flex;
@@ -58,11 +60,15 @@ a {
   text-decoration: none;
 }
 .top {
+  position: sticky;
+  top: 0;
+  z-index: 2;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
   width: 100%;
+  background-color: #FFF;
 }
 .top h1 {
   color: #000080;
@@ -76,12 +82,18 @@ a {
 .top nav a {
   margin: 0 0.5rem;
 }
+.top nav a:hover {
+  transform: scale(1.15);
+}
 main {
+  position: relative;
+  top: 3rem;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
+  z-index: 1;
 }
 main .buttons {
   display: flex;
@@ -92,4 +104,10 @@ main .buttons {
 }
 main .buttons .btn {
   margin: 0 1.5rem;
+}
+main .buttons div {
+  font-size: 2rem;
+}
+footer {
+  margin-top: 3rem;
 }
