--- a/LESS/global.less
+++ b/LESS/global.less
@@ -8,6 +8,7 @@ html {
     background: @secondary-color;
     max-width: 500px;
     width: 100%;
+    height: 100%;
     margin: 0 auto;
     padding: 1rem 2rem;
     .flex-column;
