--- a/LESS/main.less
+++ b/LESS/main.less
@@ -1,8 +1,11 @@
 main {
+    position: relative;
+    top: 3rem;
     width: 100%;
     .flex-column;
     align-items: center;
     text-align: center;
+    z-index: 1;
     .buttons {
         .flex-row;
         // .test-border;
@@ -11,9 +14,9 @@ main {
         padding: 0.5rem;
         .btn {
             margin: 0 1.5rem;
-            log-in {
-
-            }
+        }
+        div {
+            font-size: 2rem;
         }
     }
 }
