--- a/LESS/top.less
+++ b/LESS/top.less
@@ -1,10 +1,13 @@
 .top {
+    position: sticky;
+    top: 0;
+    z-index: 2;
     .flex-row;
     justify-content: space-around;
     align-items: center;
     // .test-border;
     width: 100%;
-
+    background-color: @white;
     h1 {
     color: @primary-color;
     }
@@ -14,6 +17,9 @@
         align-items: center;
         a {
             margin: 0 0.5rem;
+        }
+        a:hover {
+            transform: scale(1.15);
         }
     }
 }
